Enhance Java blog post with comprehensive updates on JDK features from versions 8 to 22, including new methods, modular systems, and improvements in garbage collection and concurrency. Added detailed explanations, code examples, and a table of contents for better navigation.